odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo  # Sets Deployment name
spec:
  #replicas: 2
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      securityContext:
          fsGroup: 101     # GID of the 'odoo' group (usually 101)
          #Optional, but good practice for explicitness:
          #runAsUser: 101   # UID of the 'odoo' user
            #runAsGroup: 101  # Primary GID of the 'odoo' user
      containers:
        - name: odoo
          image: odoo:18.0 # Sets Image
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8069  # Exposes container port
          args: ["--log-level=info", "--db-filter=.*"]
          volumeMounts:
           - name: odoo
             mountPath: /var/lib/odoo
           - name: custom-addons # For addons, if on the same PVC
             mountPath: /mnt/extra-addons
           - name: odoo-config-volume
             mountPath: /etc/odoo/odoo.conf
             subPath: odoo.conf


      volumes:
        - name: odoo
          persistentVolumeClaim:
            claimName: csi-s3-pvc
            readOnly: false
        - name: custom-addons
          persistentVolumeClaim:
            claimName: addons-pvc
            readOnly: false
        - name: odoo-config-volume
          configMap:
             name: odoo-config
