odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8069 # Or 8069, if Ingress targets 8069 directly
      targetPort: 8069
    - name: longpolling
      port: 8072
      targetPort: 8072
  selector:
    app: odoo
